# OpteaTech

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  start-dev.sh
.claude/: settings.local.json
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/database/: postgres.go
api/internal/handlers/: admin_requests.go  auth.go  client_portal.go  contact.go  messages.go  pagination.go  projects.go  requests.go  services.go  store.go  testimonials.go  validation.go
api/internal/middleware/: auth.go  client_auth.go  cors.go  logger.go  ratelimit.go  security.go
api/internal/models/: message.go  portal.go  project.go  request.go  service.go  testimonial.go  user.go
api/internal/repository/: portal_repo.go  requests_repo.go
api/internal/services/: email_service.go  token_service.go  token_service_test.go
api/migrations/: 001_init.sql  002_admin_refresh_tokens.sql  003_seed_admin_user.sql  004_refresh_tokens_security.sql  005_client_portal.sql
apps/admin/: index.html  package.json
apps/desktop/: .env.example  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  files.rs  mod.rs  notifications.rs  system.rs
apps/web/: AGENTS.md  next.config.ts  package-lock.json  package.json
(+87 files in other folders)
